--- a/style.scss
+++ b/style.scss
@@ -18,9 +18,9 @@ html {
 }
 
 body {
-	background: $white;
+	background: #ff8433;
   font: 18px/1.4 $helvetica;
-  color: $darkGray;
+  color:  #e62e00;
 }
 
 .container {
