--- a/style.scss
+++ b/style.scss
@@ -31,7 +31,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "ROSECUBE", Times, serif;
+  font-family: "miss issipi", Times, serif;
   color: $darkerGray;
   font-weight: bold;
 
