--- a/style.scss
+++ b/style.scss
@@ -19,7 +19,7 @@ html {
 
 body {
 	background: #ff8433;
-  font: 18px/1.4 "miss issipi", Times, serif;
+  font: 18px/1.4 "wingdings", Times, serif;
   color:  #e62e00;
 }
 
