--- a/style.scss
+++ b/style.scss
@@ -18,8 +18,8 @@ html {
 }
 
 body {
-	background: #ff8433;
-  font: 18px/1.4 "wingdings", Times, serif;
+	background: #33ECFF;
+  font: 18px/1.4 , Times, serif;
   color:  #e62e00;
 }
 
