--- a/style.scss
+++ b/style.scss
@@ -31,7 +31,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "mississipi", Times, serif;
+  font-family: , Times, serif;
   color: $darkerGray;
   font-weight: bold;
 
@@ -50,7 +50,6 @@ h1 {
     color: inherit;
   }
 }
-
 h2 {
   font-size: 24px;
 }
@@ -61,7 +60,7 @@ h3 {
 
 h4 {
   font-size: 18px;
-  color: #990000;
+  color: #000000;
 }
 
 p {
