--- a/style.scss
+++ b/style.scss
@@ -32,7 +32,7 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   font-family: , Times, serif;
-  color: $darkerGray;
+  color: #000000;
   font-weight: bold;
 
   line-height: 1.7;
@@ -60,7 +60,7 @@ h3 {
 
 h4 {
   font-size: 18px;
-  color: #000000;
+  color: #;
 }
 
 p {
